--- a/src/layout/components/layout.css
+++ b/src/layout/components/layout.css
@@ -22,71 +22,61 @@ canvas{vertical-align:bottom;position:absolute;top:0;left:0;z-index:9}
 #stats{border-radius:3px 3px 0 0;overflow:hidden}
 .count-particles{border-radius:0 0 3px 3px}
 .how-to{position:relative;display:flex;align-items:center;justify-content:center}
-#section0{background:url(../../assets/images/bg-banner.png)no-repeat;background-size:cover;background-position:center;}
+#section0{background:radial-gradient(circle, rgba(3,113,83,1) 0%, rgba(0,0,0,1) 100%);background-size:cover;background-position:center;}
 .banner{height:100%;overflow: hidden;}
-#logo{float:left;width:23%}
+#logo{float:left;width:200px}
+#logo img{max-width:100%}
 #sticker{float:right;width:68%}
 .sticker-menu{float:right;width:77%}
 .sticker-menu ul{padding:0;margin:0;list-style:none;overflow:hidden;float:right}
-.sticker-menu ul li{font-size:14px;color:#fff;line-height:24px;border:2px solid #01a477;border-radius:99px;float:left;margin-left:15px;position:relative;overflow:hidden;z-index:99;background:#f000;transform: scale(0);transition: all 2s ease-in-out;}
+.sticker-menu ul li{font-size:14px;color:#fff;line-height:24px;border:2px solid #01a477;border-radius:99px;float:left;margin-left:15px;position:relative;overflow:hidden;z-index:99;background:#f000;;transition: all 2s ease-in-out;cursor: pointer;}
 #section0.active .sticker-menu ul li{transform: scale(1);}
 .sticker-menu ul li:after{content:'';position:absolute;width:100%;height:101%;background:linear-gradient(to right,rgba(0,153,112,1) 0%,rgba(90,242,198,1) 46%,rgba(90,242,198,1) 60%,rgba(0,153,112,1) 100%);z-index:-1;left:0;top:0;display:block;transform-origin:50% 0;transition-property:transform,-webkit-transform;transition-duration:.3s;transition-timing-function:ease-out;transform:scalex(0)}
 .sticker-menu ul li:hover:after{transform:scalex(1);transition-timing-function:cubic-bezier(0.52,1.64,.37,.66);opacity:1}
 .sticker-menu ul li a{color:#fff;font-family:"Muli",sans-serif;text-transform:uppercase;display:block;padding:5px 36px}
+.container{width:1170px;margin:0 auto}
 .banner .container{height:100%}
 .header{padding:20px 0;overflow:hidden;display:flex;align-items:center;position:relative;left:0;right:0;z-index:99;height:15%}
 .desc-info{width:42%;float:left;z-index:22}
 .desc-map{width:58%;float:left;padding-left:25px;z-index:22}
 .desc-map img{width:100%}
-.desc-map .img-id{position:relative;transform: scale(0);transition: .8s ease-in-out;}
+.desc-map .img-id{position:relative;transition: .8s ease-in-out;}
 #section0.active .desc-map .img-id{transform:scale(1)}
-.desc-info > span{font-size:48px;display:block;color:#fff;margin-bottom:30px;transform: translate(-200%,0);transition: all 1.5s ease-in-out;}
+.desc-info > span{font-size:48px;display:block;color:#fff;margin-bottom:30px;transition: all 1.5s ease-in-out;}
 #section0.active .desc-info > span{transform:translate(0,0)}
-.desc-info .take{margin:0 -7.5px 30px;overflow:hidden}
-.desc-info .take .item{width:calc(50% - 15px);margin:0 7.5px;background:#051b1e7d;text-align:center;float:left;border-radius:12px;padding:23px 30px;height:171px;transform: scale(0);transition: all 1s ease-in-out;}
+.desc-info .take{margin:0 -7.5px 30px;overflow:hidden;display: flex}
+.desc-info .take .item{width:calc(50% - 15px);margin:0 7.5px;background:#051b1e7d;text-align:center;float:left;border-radius:12px;padding:23px 30px;height:171px;transition: all 1s ease-in-out;}
 #section0.active .desc-info .take .item{transform:scale(1)}
 .desc-info .take .item h3{font-size:18px;text-transform:uppercase;color:#fff;display:block;margin:0}
 .desc-info .take .item span,.desc-info .take .item small{font-size:60px;color:#2fd193;font-weight:700}
 .desc-info .take .item p{font-size:18px;color:#2fd193}
-.from{transform:translate(-200%,0);transition: all 1.5s ease-in-out;}
+.from{transition: all 1.5s ease-in-out;}
 #section0.active .from{transform:translate(0,0)}
 .from p{font-size:20px;line-height:30px;color:#fff;display:block}
 .from h4{font-size:20px;line-height:30px;color:#2fd193}
 .desc-banner{height:90%;overflow:hidden;display:flex;align-items:center}
-.dot-map .img{width:38px;height:52px;margin:0 auto;animation-name:example2;animation-iteration-count:infinite;animation-duration:2.5s}
-@-webkit-keyframes example2 {
-0%{opacity:1}
-50%{opacity:.5}
-100%{opacity:1}
-}
 .dot-map .img img{width:100%}
 .dot-map h3{font-size:18px;font-weight:700;color:#fff;padding:5px 33px 0;text-transform:uppercase;white-space:nowrap;line-height:30px;margin:0}
-.dot-map .text{background:url(../../assets/images/bg-txt.png)no-repeat;display:table;background-size:100% 100%;padding-bottom:19px;display:none;position:absolute;bottom:100%;left:50%;transform:translateX(-50%)}
+.dot-map .text{display:table;background-size:100% 100%;padding-bottom:19px;display:none;position:absolute;bottom:100%;left:50%;transform:translateX(-50%)}
 .dot-map .ic-1.active .text,.dot-map .ic-1:hover .text{display:block}
 .dot-map .ic-1{display:table;text-align:center;position:absolute;top:15%;left:25%}
 .dot-map .ic-1:nth-child(2){top:15.5%;left:43.5%}
 .dot-map .ic-1:nth-child(3){top:28%;left:70%}
 .dot-map .ic-1:nth-child(4){top:26.2%;left:82.6%}
 .dot-map .ic-1:nth-child(5){top:62%;left:83%}
-.page-scroll a a span,.fp-slidesNav ul li a span{height:13px;width:13px;transform:translate(-50%,-50%);border:2px solid #39b549;margin:0}
-.page-scroll a:hover a span,.fp-slidesNav ul li:hover a span,.page-scroll a a.active span,.fp-slidesNav ul li a.active span,.page-scroll a:hover a.active span,.fp-slidesNav ul li:hover a.active span{margin:0;background:#39b549;height:13px;width:13px}
-.page-scroll a .fp-tooltip.fp-right{left:calc(100% + 15px);top:50%;overflow:initial;font-size:16px;line-height:36px;background:#39b549;display:block;max-width:initial;font-family:"Muli",sans-serif;font-weight:300;width:148px!important;padding:0 15px;transform:translateY(-50%);border-radius:22px;opacity:0}
-.page-scroll a:nth-child(1) .fp-tooltip.fp-right{width:273px!important}
-.page-scroll a .fp-tooltip.fp-right:before{content:'';position:absolute;left:-10px;top:50%;transform:translateY(-50%);width:0;height:0;border-top:6px solid transparent;border-right:12px solid #39b549;border-bottom:6px solid transparent}
-.page-scroll a.active .fp-tooltip.fp-right{display:block}
-#fp-nav.fp-right{right:initial;left:18px;display:block!important;overflow:initial}
-.page-scroll a,.fp-slidesNav ul li{margin-bottom:20px}
-#section1{background:url(../../assets/images/bg-ss2.png)no-repeat;background-size:100% 100%;/* height:100vh */}
-#section1 .item h2{font-size:44px;color:#fff;display:block;margin:0 0 25px;text-align:left}
-#section1 .item p{font-size:18px;line-height:24px;display:block;font-weight:300;text-align:left;color:#fff}
-#section1 .what .content{display:flex;align-items:center;position: relative;overflow: hidden;}
-#section1 .what{/* height:100%; *//* display: flex; */}
-.img-dd{position:absolute;left:44%;animation-name:example;animation-iteration-count:infinite;animation-duration:3s}
-.img-dd img{width:85%}
-@-webkit-keyframes example {
-0%{top:10%}
-50%{top:20%}
-100%{top:10%}
+.dot-map .img{width:38px;height:52px;margin:0 auto;-webkit-animation: example2 2.5s linear forwards infinite;}
+@-webkit-keyframes example2 {
+    0%{opacity:1}
+    50%{opacity:.5}
+    100%{opacity:1}
 }
-#section1 .item-img{position:relative;overflow:hidden}
-#section1 .item-img > img{width:85%;float:right;padding-top:40px}
+
+.footer{position:relative;width:100%;text-align:center;height: 100%;}
+.mxh ul{margin:15px auto;padding: 0;}
+.mxh ul li{padding-right:9px;transform: translate(0,20px);transition:all 1.5s ease-in-out}
+.mxh ul li a{color:#fff;display:block;height:40px;width:40px;border:1px solid #fff;border-radius:50%;text-align:center;line-height:40px}
+.mxh ul li a i{transition:all .35s;color:#fff;font-size:17px;line-height:29px}
+.mxh ul li a:hover{background:#00fdb7;box-shadow:0 0 12px rgba(255,255,255,.6)}
+.join-us{background:#075842;background-size:cover;padding:30px 0;height: 30%;}
+.join-us p{font-size:22px;line-height:48px;color:#fff}
+.join-us span{font-size:16px;line-height:48px;font-weight:300;color:#fff}
